<resources>
    <string name="app_name">Meetify</string>
    <string name="accessToken">sk.eyJ1Ijoia3IzdiIsImEiOiJjaXIyOTg2ZmEwMDFienZrcW04dmxwa2FrIn0.oZ1hJ8ApK5hbQaBkvcgiZQ</string>
    <string name="street_style">mapbox://styles/kr3v/cir4v9b120014cgnb9z0yyjay</string>
    <string name="com_vk_sdk_ApiVersion">5.60</string>
    <integer name="com_vk_sdk_AppId">5616216</integer>
    <string name="json_camera_example">{\"bearing\":26.8502140045166,\"target\":{\"altitude\":0.0,\"latitude\":48.468741627458066,\"longitude\":35.05147779416143},\"tilt\":0.0,\"zoom\":14.937994003295898}</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="image_of_place">Image of place</string>
    <string name="mac">Address</string>
    <string name="types">Types</string>
    <string name="button">Button</string>
    <string name="user_isOnline">Is user online or offline</string>
    <string name="example">example</string>
    <string name="no_place">There is no places near this</string>
    <string name="add_place">Add place</string>
    <string name="place_add_description_tip">Type place description</string>
    <string name="place_add_name_tip">Type place name</string>
    <string name="place_add_friends_tip">Select friends you want to see in this place</string>
    <string name="photo_of_your_place">Photo of your place</string>
    <string name="login_wait">You\'ve already logged into vk, just wait.</string>
    <string name="login_progress_0">Trying to login VK</string>
    <string name="login_progress_30">Fetching information about user from VK</string>
    <string name="login_progress_60">"Sending something to Meetify's server"</string>
    <string name="login_progress_100">Well done, initiating new life!</string>
    <string name="login_progress_unknown">Something went wrong.</string>
    <string name="notification">new places for you!</string>
    <string name="drawer_places_tip">Your own and your friends places</string>
    <string name="drawer_settings_tip">App settings</string>
    <string name="drawer_map_tip">Watch your own city map and some places to visit</string>
    <string name="drawer_friends_tip">Your friends from VK</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="title_color_picker">Select your color</string>
    <string name="ok">OK</string>
    <string name="no">Cancel</string>
    <string name="settings_item1">Send your location to server</string>
    <string name="settings_item2">Receive notifications about new places</string>
    <string name="place_info_name_tip">place_info_name_tip</string>
    <string name="place_info_location_tip">place_info_location_tip</string>
    <string name="place_info_time_tip">place_info_time_tip</string>
    <string name="place_info_creator_tip">place_info_creator_tip</string>
    <string name="place_info_allowed_tip">place_info_allowed_tip</string>
    <string name="map_find_tip">Find some places</string>
    <string name="map_search_icon_toolbar">map_search_icon_toolbar</string>
    <string name="listview_reply_author_tip">Comment author</string>
    <string name="listview_reply_comment_tip">MultiAutoCompleteTextView</string>
    <string name="_1024">1024</string>
    <string name="place_add_time_tip">Click here to choose time</string>
    <string name="place_info_save_tip">Save</string>
    <string name="dialog_place_complete_tip">Complete</string>
</resources>
