<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/place_icon"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_of_place"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/place_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/place_name"
        android:layout_below="@+id/place_name"
        android:text="@string/mac"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <TextView
        android:id="@+id/place_types"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/place_address"
        android:layout_below="@+id/place_address"
        android:text="@string/types"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/example_name_of_place"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</RelativeLayout>