<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_places_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krev.trycrypt.activity.PlaceAddActivity">

    <ImageView
        android:id="@+id/place_add_icon"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_above="@+id/place_add_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/photo_of_your_place"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <EditText
        android:id="@+id/place_add_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignLeft="@+id/place_add_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/place_add_name"
        android:layout_below="@+id/place_add_name"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/place_add_description_tip"
        android:inputType="text|textMultiLine"
        android:lines="3"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/place_add_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/place_add_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_add_name" />
    <!--android:textAppearance="@style/Material.TextAppearance.SimpleDialog"-->

    <EditText
        android:id="@+id/place_add_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/place_add_icon"
        android:layout_toRightOf="@+id/place_add_icon"
        android:ems="10"
        android:hint="@string/place_add_name_tip"
        android:inputType="text"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/place_add_icon"
        app:layout_constraintRight_toRightOf="@+id/place_add_description"
        app:layout_constraintTop_toTopOf="parent" />
    <!--android:textAppearance="@style/Material.TextAppearance.SimpleDialog"-->
    <TextView
        android:id="@+id/place_add_text_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_add_description"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/place_add_friends_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_add_icon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/place_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/place_add_friends"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:id="@+id/place_add_friends"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/place_add_description"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/place_add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_add_text_friends"
        app:layout_constraintVertical_bias="0.6" />
</android.support.constraint.ConstraintLayout>
