<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/place_info_image"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_info_name_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_image" />


    <ImageView
        android:id="@+id/place_info_location_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/place_info_location_text"
        app:layout_constraintRight_toLeftOf="@+id/place_info_location_text"
        app:layout_constraintTop_toTopOf="@+id/place_info_location_text"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/place_info_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/place_info_location_tip"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/place_info_creator_text"
        app:layout_constraintRight_toRightOf="@+id/place_info_creator_text"
        app:layout_constraintTop_toBottomOf="@+id/place_info_creator_text"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/place_info_time_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/place_info_time_text"
        app:layout_constraintRight_toLeftOf="@+id/place_info_time_text"
        app:layout_constraintTop_toTopOf="@+id/place_info_time_text"
        app:srcCompat="@drawable/ic_time" />

    <TextView
        android:id="@+id/place_info_time_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/place_info_time_tip"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/place_info_friends_text"
        app:layout_constraintRight_toRightOf="@+id/place_info_friends_text"
        app:layout_constraintTop_toBottomOf="@+id/place_info_friends_text"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/place_info_creator_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/place_info_creator_text"
        app:layout_constraintRight_toLeftOf="@+id/place_info_creator_text"
        app:layout_constraintTop_toTopOf="@+id/place_info_creator_text"
        app:srcCompat="@drawable/ic_admin" />

    <TextView
        android:id="@+id/place_info_creator_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:autoLink="web"
        android:text="@string/place_info_creator_tip"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_info_image" />

    <ImageView
        android:id="@+id/place_info_friends_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/place_info_friends_text"
        app:layout_constraintRight_toLeftOf="@+id/place_info_friends_text"
        app:layout_constraintTop_toTopOf="@+id/place_info_friends_text"
        app:srcCompat="@drawable/ic_friends" />

    <TextView
        android:id="@+id/place_info_friends_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/place_info_allowed_tip"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/place_info_location_text"
        app:layout_constraintRight_toRightOf="@+id/place_info_location_text"
        app:layout_constraintTop_toBottomOf="@+id/place_info_location_text" />

    <TextView
        android:id="@+id/place_info_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_info_name_tip"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--<include-->
    <!--android:id="@+id/include"-->
    <!--layout="@layout/listview_reply"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_marginEnd="16dp"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/place_info_time_text"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--app:layout_constraintVertical_bias="1.0"-->
    <!--app:layout_constraintHorizontal_bias="0.96" />-->

    <ListView
        android:id="@+id/place_info_time_listview"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/listview_reply"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_info_time_text"
        app:layout_constraintVertical_bias="0.25" />

</android.support.constraint.ConstraintLayout>